# stockQuotes

./: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  README.md  StatReport.hs  stockquotes.cabal
